--- a/.env
+++ b/.env
@@ -12,3 +12,11 @@ HHH_SERVER=7de06e18bad4fa5d198ef900
 HHH_LOCAL=7c45a4a25ef4f9ed0ce40535
 YOUNG_SERVER=6ccf7d88b0bf17d8cabc7420
 YOUNG_LOCAL=5c713df9940d81a3fe1f5ef2
+OOP_SERVER=2933f6f60f105f8e1e9bb04c
+TGK_SERVER=3fb142e0750140cce93d4ecb
+DDP_SERVER=b5a9f964e7ee1958268c4702
+DDP_LOCAL=73a3b00ae42d2c13d206862b
+RAP_SERVER=a433b80f3f80ccb4176ee3d4
+RAP_LOCAL=be783d3cb43108ab714bc5ae
+THANKS_SERVER=63cc7b6629f135f16e0445fc
+THANKS_LOCAL=27b503476fbf0df884faf3c9
