--- a/.env
+++ b/.env
@@ -20,3 +20,5 @@ RAP_SERVER=a433b80f3f80ccb4176ee3d4
 RAP_LOCAL=be783d3cb43108ab714bc5ae
 THANKS_SERVER=63cc7b6629f135f16e0445fc
 THANKS_LOCAL=27b503476fbf0df884faf3c9
+ROBOT_SERVER=9b4bc83a11b18f654b749560
+ROBOT_LOCAL=edfdb4e2943b5e5f237795cc
